few mobile improvements

--- a/src/css/cards/card-paragraph.scss
+++ b/src/css/cards/card-paragraph.scss
@@ -4,9 +4,8 @@
 	.paragraph-container{
 		position: absolute;
 		left:20px;
-		top:45%;
+		top:40px;
 		right:20px;
-		transform:translateY(-50%);
 	}
 	h3{
 		font-family: $f-serif-headline;
