--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -38,6 +38,11 @@ body {
         border:none;
     }
 
+    .mobile-cards {
+        top: 0;
+        width: 100%;
+    }
+
     .card{
         width:100%;
         height:100%;
