--- a/src/css/cards/card-paragraph.scss
+++ b/src/css/cards/card-paragraph.scss
@@ -132,7 +132,6 @@
 @media(min-width: breakpoints(tablet)){
 	.slide-text+.slide-text{
 		.card.card-paragraph{
-			box-shadow:none;
 			.paragraph-container{
 				p{
 					margin-top:0;
@@ -143,6 +142,13 @@
 			}
 		}
 	}
+
+	.slide-mobile+.slide-text{
+		.card.card-paragraph .paragraph-container p{
+			margin-top:0;
+		}
+	}
+
 	.slide-title+.slide-text{
 		.card.card-paragraph{
 			p{
