--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,8 +1,9 @@
 #header-wrapper{
     .header-inner{
-        font-family: $f-serif-headline;
+       
         color:#FDEEE1;
         h1{
+             font-family: $f-serif-headline;
             font-size:42px;
             line-height:42px;
             font-weight:bold;
@@ -15,7 +16,7 @@
         p{
             font-weight:100;
             font-size:16px;
-            line-height:24px;
+            line-height:21px;
             margin:12px 0;
         }
     }
@@ -35,7 +36,7 @@
     span{
         width: 34px;
         height: 34px;
-        background: #fff;
+        background: #ffbb00;
         border: none;
         border-radius: 80px;
         outline: none;
