--- a/src/css/grid.scss
+++ b/src/css/grid.scss
@@ -51,6 +51,7 @@
     @media(min-width: breakpoints(leftCol)){
         #inner-wrapper{
             max-width:1140px;
+            padding-left:180px;
         }
         .size-xs    {width:300px;}
         .size-s     {width:460px;}
