--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -98,13 +98,14 @@
         }
         .header-inner{
         	z-index:2;
-        	padding:140px 20px 100px 20px;
+        	padding:100px 20px 80px 20px;
         	overflow:hidden;
         	h1{
         		font-size:78px;
         		max-width:480px;
         		line-height:78px;
         		margin-bottom:0;
+                margin-top:0;
         		span{
         			// display:block;
         		}
@@ -148,7 +149,7 @@
     }
 }
 
-@media(min-width: breakpoints(wide)){
+@media(min-width: breakpoints(leftCol)){
 	#header-wrapper{
 		margin-left:-180px;
         .header-inner{
