--- a/src/css/cards/card-paragraph.scss
+++ b/src/css/cards/card-paragraph.scss
@@ -143,7 +143,7 @@
 		}
 	}
 
-	.slide-mobile+.slide-text{
+	.slide-text + .slide-mobile + .slide-text{
 		.card.card-paragraph .paragraph-container p{
 			margin-top:0;
 		}
