--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -3,7 +3,7 @@
        
         color:#FDEEE1;
         h1{
-             font-family: $f-serif-headline;
+            font-family: $f-serif-headline;
             font-size:42px;
             line-height:42px;
             font-weight:bold;
@@ -12,6 +12,9 @@
                 display:inline;
             }
             
+        }
+        h2,h3{
+            font-family: $f-serif-headline;
         }
         p{
             font-weight:100;
@@ -114,7 +117,7 @@
         position: relative;
         background-image: url(/imgs/river-header.png);
         background-repeat:no-repeat;
-        background-size:100%;
+        background-size:140%;
 
         .header-image-container{
         	line-height: 0;
