--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -83,31 +83,11 @@
     transform:rotate(90deg);
 }
 
-.mobile-opener {
+.card-opener {
     padding: 20px;
     background-image:url(/imgs/mekong_mobile.jpg);
     background-size:cover;
 }
-
-.mobile-cards {
-    position: relative;
-}
-
-.mobile-cards-overlay {
-    position: absolute;
-    background: #000;
-    opacity: .75;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1;
-}
-
-.mobile-cards-active {
-    display: none;
-}
-
 
 @media(min-width: breakpoints(tablet)){
     #header-wrapper{
