--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -33,6 +33,8 @@ body.gv-loaded {
     @import 'modules/share';
 
     margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     padding:0;
     *, * *{
     	box-sizing:border-box;
