--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,4 +1,5 @@
 #header-wrapper{
+    margin-top:90px;
     .header-inner{
        
         color:#FDEEE1;
@@ -13,7 +14,11 @@
             }
             
         }
-        h2,h3{
+        h2{
+            margin-top:24px;
+            font-size:16px;
+        }
+        h2,h3,p{
             font-family: $f-serif-headline;
         }
         p{
@@ -29,9 +34,22 @@
         content:'';
     }
 }
+.shareButtons{
+    position: absolute;
+    top:0;
+    left:20px;
+    button.gv-share{
+        border: 1px solid #6C6A62;
+        height: 40px;
+        width:40px;
+        background-color:transparent;
+        background-size:32px;
+    }
+}
 
 .gv-start-button {
-    color: #fff;
+    color: #ffbb00;
+    font-size:14px;
     float:right;
     font-family:$f-sans-serif-text;
     margin-top:20px;
@@ -44,7 +62,7 @@
         border-radius: 80px;
         outline: none;
         display:inline-block;
-        margin-top:-6px;
+        margin-top:-8px;
         vertical-align: top;
         background-image: url(/imgs/arrow-icon.svg);
         background-position: center;
@@ -55,27 +73,27 @@
 
 .gv-header-journey-text {
     display: inline-block;
-    border-top: 1px solid #fdeee1;
     padding: 5px 0;
-    font-size: 14px;
+    font-size: 12px;
     font-family:$f-sans-serif-text;
-    color: #fff;
+    color: rgba(255,255,255,0.6);
 
 }
 .gv-header-down, .gv-header-right {
     margin-left: 5px;
-    width: 20px;
-        height: 20px;
-        background: #ffbb00;
-        border: none;
-        border-radius: 80px;
-        outline: none;
-        display:inline-block;
-        background-image: url(/imgs/arrow-icon.svg);
-        background-position: center;
-        background-size: 16px;
-        background-repeat: no-repeat;
-        margin-bottom: -5px;
+    width: 16px;
+    line-height:24px;
+    height: 16px;
+    background: #ffbb00;
+    border: none;
+    border-radius: 80px;
+    outline: none;
+    display:inline-block;
+    background-image: url(/imgs/arrow-icon.svg);
+    background-position: center;
+    background-size: 12px;
+    background-repeat: no-repeat;
+    margin-bottom: -5px;
 
 }
 
@@ -85,8 +103,10 @@
 
 .card-opener {
     padding: 20px;
-    background-image:url(/imgs/mekong_mobile.jpg);
-    background-size:cover;
+    background-color:#333;
+    background-image:url(/imgs/river-header-mobile.png);
+    background-size:100%;
+    background-repeat:no-repeat;
 }
 
 @media(min-width: breakpoints(tablet)){
@@ -150,11 +170,6 @@
                 display:inline-block;
                 padding-top:12px;
                 button.gv-share{
-                    border: 1px solid #6C6A62;
-                    height: 40px;
-                    width:40px;
-                    background-color:transparent;
-                    background-size:32px;
                 }
             }
         }
