--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -19,6 +19,23 @@ body.gv-loaded {
     transition:background 1s linear;
 }
 
+#header {
+    z-index: 100;
+    position: fixed;
+    width: 100%;
+}
+
+.is-immersive-interactive {
+    .gv-mobile-cards {
+        position: fixed;
+        top: 0;
+    }
+
+    #header.gv-hidden {
+        display: none;
+    }
+}
+
 // Remove <figure> margin
 .interactive {
     @import 'header';
@@ -33,8 +50,8 @@ body.gv-loaded {
     @import 'modules/share';
 
     margin: 0;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
     padding:0;
     *, * *{
     	box-sizing:border-box;
@@ -47,7 +64,7 @@ body.gv-loaded {
     .mobile-cards {
         top: 0;
         width: 100%;
-        z-index: 10000;
+        z-index: 1;
     }
 
     .card{
