--- a/src/css/cards/card-video.scss
+++ b/src/css/cards/card-video.scss
@@ -204,6 +204,7 @@
 			.pause-btn{
 				display:inline-block;
 				background-image: url(/imgs/play-btn.svg);
+				background-position-x:30px;
 				&:hover{
 					background-image: url(/imgs/play-hover-btn.svg);
 				}
