--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -5,8 +5,8 @@
         color:#FDEEE1;
         h1{
             font-family: $f-serif-headline;
-            font-size:42px;
-            line-height:42px;
+            font-size:32px;
+            line-height:36px;
             font-weight:bold;
             margin-bottom:0;
             span{
@@ -24,7 +24,7 @@
         p{
             font-weight:400;
             font-size:16px;
-            line-height:21px;
+            line-height:24px;
             margin:12px 0;
         }
     }
@@ -102,11 +102,23 @@
 }
 
 .card-opener {
-    padding: 20px;
+    padding: 10px;
     background-color:#333;
-    background-image:url(/imgs/river-header-mobile.png);
     background-size:100%;
     background-repeat:no-repeat;
+    background-image:url(/imgs/river-header-mobile_400.png);
+}
+
+@media(min-width: 400px){
+    .card-opener {
+        background-image:url(/imgs/river-header-mobile_500.png);
+    }
+}
+
+@media(min-width: 500px){
+    .card-opener {
+        background-image:url(/imgs/river-header-mobile.png);
+    }
 }
 
 @media(min-width: breakpoints(tablet)){
