--- a/src/css/cards/card-iframe.scss
+++ b/src/css/cards/card-iframe.scss
@@ -6,7 +6,7 @@
 	    font-size: 16px;
 	    line-height: 24px;
 	    max-width:620px;
-	    padding: 0 20px;
+	    padding: 5px 10px;
 	    margin:0;
 	}
 
