adds share tools

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -63,7 +63,7 @@ body.gv-loaded {
     }
 
     .mobile-cards {
-        height: 1000px;
+        overflow: hidden;
         width: 100%;
         z-index: 1;
     }
