--- a/src/css/cards/card-photo.scss
+++ b/src/css/cards/card-photo.scss
@@ -12,16 +12,16 @@
 	}
 	.photo-caption-container{
 		position: absolute;
-		bottom:0;
+		top:0;
 		width:100%;
 	}
 
 	.photo-caption{
 		height:auto;
-		// background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.70) 100%);
+		 background: linear-gradient(to top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 125%);
 		display: block;
 		height:100%;
-		padding:40px 10px 16px;
+		padding: 14px 10px 18px;
 		opacity:1;
 		transition:opacity 0.4s;
 		position: relative;
