--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -115,19 +115,17 @@ body.gv-loaded {
 
 
     .swiper-pagination{
-        text-align:left;
+        text-align:center;
         width:100%;
-        bottom:0;
+        bottom:10px;
+        left: 0px;
         
         .swiper-pagination-bullet{
-            display: block;
-            width:calc(10% - 1px);
-            height:4px;
+            display: inline-block;
             background:rgba(255,255,255,0.5);
-            float:left;
+      
             margin:0;
-            margin-right:1px;
-            border-radius:0;
+            margin-right:5px;
             opacity:1;
             &.swiper-pagination-bullet-active{
                 background:#fff;
