new mute button

--- a/src/css/cards/card-quote.scss
+++ b/src/css/cards/card-quote.scss
@@ -68,8 +68,8 @@
 		position: relative;
 		margin-top:1em;
 		border-top: 1px solid #fff;
-		background-color:rgba(255,255,255,0.05);
-		padding:0 20px;
+		// background-color:rgba(255,255,255,0.05);
+		padding:0;
 
 		.quote-container{
 			position: relative;
