--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -112,9 +112,43 @@
     background-image:url(/imgs/river-header-mobile_400.png);
 }
 
-@media(min-width: 400px){
+@media(min-width: 375px){
     .card-opener {
         background-image:url(/imgs/river-header-mobile_500.png);
+    }
+
+    #header-wrapper{
+        margin-top: 160px;
+
+        .header-inner{
+       
+
+            h1{
+                font-family: $f-serif-headline;
+                font-size:44px;
+                line-height:48px;
+                font-weight:bold;
+                margin-bottom:0;
+                span{
+                    display:inline;
+                }
+                
+            }
+            h2{
+                margin-top:24px;
+                font-size:16px;
+            }
+            h2,h3,p{
+                font-family: $f-serif-headline;
+            }
+            p{
+                font-weight:400;
+                font-size:18px;
+                line-height:24px;
+                margin:12px 0;
+            }
+        }
+
     }
 }
 
