update video unmute, removed story by john vidal

--- a/src/css/cards/card-video.scss
+++ b/src/css/cards/card-video.scss
@@ -172,6 +172,10 @@
 			.unmute-video, .video-time{
 				color:#ffbb00;
 			}	
+			.unmute-btn{
+				border-color:#ffbb00;
+				background-image: url(/imgs/mute-hover-btn.svg);
+			}
 		}
 
 		.placeholder-desktop{
