--- a/src/css/cards/card-video.scss
+++ b/src/css/cards/card-video.scss
@@ -72,12 +72,28 @@
 			}
 			padding-top:40px;
 			clear:both;
+			font-size:24px;
+			line-height:28px;
+			margin:0;
+			color:#fff;
+			font-weight:400;
+		}
+
+		.placeholder-mobile .video-direction{
+			padding-top:40px;
+			clear:both;
 			font-size:18px;
 			line-height:24px;
 			margin:0;
 			color:#fff;
 			font-weight:400;
+
+			b {
+				font-size: 14px;
+			}
 		}
+
+
 	}
 	.play-btn{
 		width:80px;
