--- a/src/css/cards/card-quote.scss
+++ b/src/css/cards/card-quote.scss
@@ -8,7 +8,7 @@
 	}
 	.quote-icon{
 		display:block;
-		margin-bottom:6px;
+		margin-bottom:12px;
 	}
 	quote{
 		color:#fff;
@@ -86,6 +86,7 @@
 		}
 		.quote-icon{
 			height:30px;
+			display:none;
 		}
 		.quote-credit{
 			margin-top:30px;
@@ -130,6 +131,14 @@
 				font-size:48px;
 				line-height:54px;
 			}
+		}
+	}
+}
+
+@media(min-width:breakpoints(tablet)){
+	.slide-photo + .slide-quote{
+		.card-quote{
+			margin-top:-60px;
 		}
 	}
 }
