--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -174,6 +174,10 @@ body.gv-loaded {
         font-family:$f-sans-serif-text;
     }
 
+    a, a:visited, a:hover {
+        text-decoration: underline;
+        color: #fff;
+    }
 
 
 
