--- a/src/css/grid.scss
+++ b/src/css/grid.scss
@@ -14,7 +14,11 @@
         .size-s     {width:300px;}
         .size-m     {width:460px;}
         .size-l     {width:620px;}
-        .size-xl    {width:700px; }
+        .size-xl    {width:700px;}
+
+        .slide-text.size-m{
+            width:620px;
+        }
 
         .margin-1-col    {margin-left:160px;}
         .margin-2-col    {margin-left:160px;}
