--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -9,7 +9,7 @@
             font-weight:bold;
             margin-bottom:0;
             span{
-                display:inline;
+                display:block;
             }
             
         }
@@ -128,9 +128,6 @@
                 line-height:48px;
                 font-weight:bold;
                 margin-bottom:0;
-                span{
-                    display:inline;
-                }
                 
             }
             h2{
@@ -159,19 +156,19 @@
 
 @media(min-width: breakpoints(tablet)){
     .header-image-container{
-        background-image: url(/imgs/river-header.png);
         width:100%;
-        height:0;
-        padding-bottom:24%;
-        background-size:100%;
-        background-repeat:no-repeat;
+        height:auto;
         position:absolute;
-        max-width:1680px;
         background-position:center;
-
-        img{
-            width:115%;
-            margin-left:0;
+        .header-image{
+            background-image: url(/imgs/river-header.png);
+            width:100%;
+            height:0;
+            margin:0 auto;
+            max-width:1680px;
+            padding-bottom:24%;
+            background-size:100%;
+            background-repeat:no-repeat;
         }
     }
     #header-wrapper{
