--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -156,19 +156,20 @@
 
 @media(min-width: breakpoints(tablet)){
     .header-image-container{
-        width:100%;
         height:auto;
         position:absolute;
-        background-position:center;
+        width:100%;
         .header-image{
             background-image: url(/imgs/river-header.png);
-            width:100%;
             height:0;
             margin:0 auto;
             max-width:1680px;
             padding-bottom:24%;
             background-size:100%;
             background-repeat:no-repeat;
+            position: relative;
+            left:-40px;
+            width:104%;
         }
     }
     #header-wrapper{
@@ -185,20 +186,22 @@
         	padding:100px 20px 80px 20px;
         	overflow:hidden;
         	h1{
-        		font-size:78px;
-        		max-width:480px;
-        		line-height:78px;
+        		font-size:84px;
+        		max-width:620px;
+        		line-height:84px;
         		margin-bottom:0;
                 margin-top:0;
+                color:#a7b09e;
+
         		span{
-        			// display:block;
+        			color:#fdeee1;
         		}
         	}
         	h2{
         		font-size:22px;
         		line-height:30px;
         		max-width:630px;
-                font-weight:100;
+                font-weight:400;
         		margin:20px 0 0;
         	}
             h3{
