--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -105,7 +105,7 @@
 
 .card-opener {
     padding: 10px;
-    background-color:#333;
+    background-color:#282D23;
     background-size:100%;
     background-repeat:no-repeat;
     background-image:url(/imgs/river-header-mobile_400.png);
