--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -159,6 +159,7 @@
         height:auto;
         position:absolute;
         width:100%;
+        overflow: hidden;
         .header-image{
             background-image: url(/imgs/river-header.png);
             height:0;
