--- a/src/css/cards/card-credits.scss
+++ b/src/css/cards/card-credits.scss
@@ -7,6 +7,8 @@
 	}
 	ul{
 		padding:0;
+		margin-left:0;
+		margin-right:0;
 	}
 	ul li{
 		list-style:none;
@@ -16,6 +18,8 @@
 		line-height:18px;
 		margin-bottom:12px;
 		color:#eee;
+		margin-left:0;
+		margin-right:0;
 		strong{
 			color:#fff;
 		}
