--- a/src/css/cards/card-credits.scss
+++ b/src/css/cards/card-credits.scss
@@ -7,8 +7,7 @@
 	}
 	ul{
 		padding:0;
-		margin-left:0;
-		margin-right:0;
+		margin:0;
 	}
 	ul li{
 		list-style:none;
@@ -16,7 +15,7 @@
 		font-size:16px;
 		font-family: $f-serif-headline;
 		line-height:18px;
-		margin-bottom:12px;
+		margin-bottom:6px;
 		color:#eee;
 		margin-left:0;
 		margin-right:0;
